Changed order or elements in site manager and plugged in the spanish version of opportunities and plans page

--- a/app/views/home/opportunities_es.html
+++ b/app/views/home/opportunities_es.html
@@ -1,32 +1,32 @@
 <div id="opportunities" class="yomobi-info-page">
 
-  <h2>Business/Consultant Opportunities</h2>
+  <h2>Negocios/Consultor de Oportunidades</h2>
 
   <ul class="language-bar">
   	<li><a href="opportunities">English</a></li>
 	<li>·</li>
-	<li><a href="opportunities_es">Español</a></li>
+	<li><a href="opportunities_es">Espa&ntilde;ol</a></li>
   </ul>
 
 
-  <h3>Get Involved</h3>
-  <p>The mobile space is growing rapidly, yet most small businesses around the world do not have a mobile-optimized site. Now is the perfect time to tap into this market and develop a skill that can generate income.<p>
+  <h3>Act&uacute;a</h3>
+  <p>El entorno m&oacute;vil crece con rapidez, y la mayor&iacute;a de los peque&ntilde;os negocios en todo el mundo a&uacute;n no tienen un sitio web optimizado para m&oacute;viles. Es ahora el momento perfecto para ingresar en este mercado y desarrollar una habilidad que te puede generar ingresos.<p>
 
-  <h3>Anyone Can Do It</h3>
-  <p>We welcome website developers, SEO and marketing consultants, freelancers, college and high school students, social media marketers and entrepreneurs to use YoMobi to build mobile sites for small businesses and individuals. No programming skills are required.</p>
+  <h3>Cualquiera lo Puede Hacer</h3>
+  <p>Le damos la bienvenida a desarrolladores, consultores SEO y de marketing, profesionales freelance, estudiantes universitarios y de bachillerato, profesionales de marketing y emprendedores para que usen YoMobi en la construcci&oacute;n de sitios m&oacute;viles de peque&ntilde;os negocios e individuos. No requieres conocimientos en programaci&oacute;n.</p>
 
-  <h3>It's Easy to Learn</h3>
-  <p>Creating a standard interactive mobile site with YoMobi takes only a few minutes. If you choose to create additional pages, such as a mobile-optimized Menu for a restaurant or list of Services for a business, a typical mobile site takes 2-4 hours to complete. Once a site is built, it only takes minutes to update. YoMobi even includes a <a href="http://help.yomobi.com/SiteManager">Multiple Site Manager</a> that allows you to easily build and manage multiple sites from a single account.</p>
+  <h3>Es F&aacute;cil de Aprender</h3>
+  <p>El crear un sitio m&oacute;vil estandarizado con YoMobi toma tan s&oacute;lo unos minutos. Si optas por crear p&aacute;ginas y caracter&iacute;sticas adicionales, como lo es un Men&uacute; de restaurante optimizado para m&oacute;vil o una lista de Servicios para negocios, un t&iacute;pico sitio m&oacute;vil lleva de 2 a 4 horas para completarse. Una vez que lo armas, solo te tomar&aacute; unos pocos minutos para actualizarse. YoMobi incluye incluso un <a href="http://help.yomobi.com/SiteManager">Administrador de Sitios M&uacute;ltiple</a> que te permite armar y administrar m&uacute;ltiples sitios desde una sola cuenta.</p>
 
-  <h3>How You Benefit</h3>
-  <p>You charge the customer a one-time fee for building their mobile site based on your level of effort. You can also charge the customer a maintenance fee if they would like you to handle site administration and updates. With social media integration, email and text blasts, mobile coupons, reservation/booking links, review links and more, you easily provide a lot of value to your clients.</p>
+  <h3>Estos son tus Beneficios</h3>
+  <p>Tu les cobras a tus clientes una cuota &uacute;nica por armar su sitio m&oacute;vil de acuerdo a la labor que hayas invertido en ello. Tambi&eacute;n les puedes cobrar una cuota de mantenimiento si quieren que te hagas cargo de la administraci&oacute;n y de las actualizaciones. Con integraci&oacute;n a redes sociales, env&iacute;o colectivo de email y mensajes de texto, cupones m&oacute;viles, enlaces para reservaciones, enlaces para revisiones/retroalimentaci&oacute;n y mucho m&aacute;s, tu f&aacute;cilmente podr&aacute;s brindar un servicio de gran valor a tus clientes.</p>
 
-  <h3>How to Get Started</h3>
-  <p><a href="http://yomobi.com/users/sign_up">Start by signing up for a YoMobi account.</a> It's free, fast and easy. If you are new to using a do-it-yourself platform like YoMobi.com, familiarize yourself with the platform by creating an interactive e-business card for yourself. <a href="http://kdr.yomobi.com">Click here for an example</a>. Once you are ready to market your skills, we've found that an effective way to build a customer base is to choose a small business and create a mobile site based on their existing desktop site. Once their mobile site is ready, visit the business and speak with the manager to demonstrate how much better the mobile-optimized version of their site looks and works on a mobile phone. Start building your customer base slowly and let them refer you. You may also want to partner with someone that does SEO/Marketing Consulting and build sites for them.</p>
+  <h3>Manera de Comenzar</h3>
+  <p><a href="http://yomobi.com/users/sign_up">Reg&iacute;strate e inicia una cuenta con YoMobi.</a> Es gratis, r&aacute;pido y sencillo. Si nunca has usado una plataforma del tipo h&aacute;zlo-t&uacute;-mismo como la de YoMobi.com, familiar&iacute;zate con ella al crear una tarjeta de presentaci&oacute;n interactiva por ti mismo. <a href="http://kdr.yomobi.com">Pulsa aqu&iacute; para ver un ejemplo</a>. Una vez que est&eacute;s en disposici&oacute;n de comercializar tus habilidades, te diremos que ya hemos encontrado una efectiva manera de desarrollar una base de clientes, que es elegir un peque&ntilde;o negocio y crearle un sitio m&oacute;vil en base a su sitio web tradicional ya existente. Una vez que su sitio web est&eacute; listo, visita ese negocio y habla con el gerente para mostrarle la mejor&iacute;a en apariencia y funciones que tiene la versi&oacute;n optimizada m&oacute;vil respecto a la otra al navegarse a trav&eacute;s de un m&oacute;vil/celular. Comienza a construir tu base de clientes lentamente e inv&iacute;talos a referenciarte. Tambi&eacute;n podr&iacute;as asociarte con quienes se dediquen la Consultor&iacute;a en SEO/Marketing para que les construyas sus sitios.</p>
 
-  <h3>Provide a Good Value</h3>
-  <p>Our goal at YoMobi is to make the mobile space accessible to businesses so they can take advantage of the new revenue and customer streams that mobile commerce represents, provide a more interactive site to reach their mobile customers, and enhance their visitor-to-customer conversion rates. We've kept our fees low to promote our vision. We recommend that you set reasonable fees to advance that goal as well.</p>
+  <h3>Ofrecer&aacute;s un Servicio de Alto Valor</h3>
+  <p>Nuestra meta en YoMobi es hacer accesible la red m&oacute;vil a las empresas y negocios para que puedan aprovechar las ventajas de los nuevos ingresos y del tr&aacute;fico de clientes que el comercio m&oacute;vil les representa, brindarles un sitio m&aacute;s interactivo para que alcancen a sus clientes m&oacute;viles, y as&iacute; incrementen su &iacute;ndice de conversi&oacute;n visitas/ventas. Mantendremos cuotas bajas para promover nuestra filosof&iacute;a. Te recomendamos que fijes cuotas razonables para que tambi&eacute;n lo puedas hacer t&uacute;.</p>
 
-  <h3>Contact Us</h3>
-  <p>If you have questions regarding this Consultant Opportunity, please feel free to contact us at <a href="mailto:support@yomobi.com">support@yomobi.com</a>.<p>
+  <h3>Cont&aacute;ctanos</h3>
+  <p>Si tienes alguna pregunta acerca de esta Oportunidad como Consultor, no dudes en contactarnos en <a href="mailto:support@yomobi.com">support@yomobi.com</a>.<p>
 </div>
