--- a/app/views/home/plans_es.html
+++ b/app/views/home/plans_es.html
@@ -1,75 +1,75 @@
 <div id="plans" class="yomobi-info-page">
 
-  <h2>Mobile Site Plans</h2>
+  <h2>Planes para Sitios M&oacute;viles</h2>
 
   <ul class="language-bar">
   <li><a href="plans">English</a></li>
   <li>·</li>
-  <li><a href="plans_es">Español</a></li>
+  <li><a href="plans_es">Espa&ntilde;ol</a></li>
   </ul>
 
-  <h3>Do It Yourself</h3>
+  <h3>H&aacute;zlo T&uacute; Mismo</h3>
 
-  <p>YoMobi provides a free and easy solution for businesses and individuals to create a mobile-optimized website. With just a little technical skill and time, you can create your own mobile site and immediately reap the benefits that come from offering your customers a better and more interactive mobile experience.<p>
+  <p>YoMobi brinda una sencilla y gratuita soluci&oacute;n a personas y negocios para crear su propio sitio web m&oacute;vil optimizado. Con un m&iacute;nimo de habilidad t&eacute;cnica y tiempo, puedes crear tu propio sitio m&oacute;vil para beneficiarte de inmediato al ofrecer a tus clientes una mejor y m&aacute;s interactiva experiencia m&oacute;vil.<p>
   <br/>
-  <p>YoMobi's mission is to provide a comprehensive all-in-one mobile ecosystem that includes all the features you need to thrive in the booming mobile-commerce space, all with minimal, time, effort and cost.</p>
+  <p>La misi&oacute;n de YoMobi es el brindar un comprensible entorno m&oacute;vil integral que incluya todas las caracter&iacute;sticas que necesitas para prosperar en el acelerado medio del comercio web m&oacute;vil, con una m&iacute;nima inversi&oacute;n de tiempo, dinero y esfuerzo.</p>
   <br/>
 
   <div class="plan-box">
-    <h3>Standard Plan</h3>
-    <h3>Cost:</h3>
+    <h3>Plan Est&aacute;ndar</h3>
+    <h3>Costo:</h3>
     <ul>
-      <li>Free</li>
+      <li>Gratuito</li>
     </ul>
-    <h3>Features:</h3>
+    <h3>Caracter&iacute;sticas:</h3>
     <ul>
-      <li>Free Hosting</li>
-      <li>Free Domain ([yoursitename].yomobi.com)</li>
-      <li>Free auto-redirect code to connect your desktop site to your mobile site</li>
-      <li>Free SMS and E-Mail Blast capability<span class="notation-number">1</span></li>
-      <li>Free Social Media Integration</li>
-      <li>Free Click-to-Call Phone Widget</li>
-      <li>Free Location Map with smartphone GPS navigation</li>
-      <li>Unlimited Custom Pages, Categories, and Links</li>
-      <li>RSS Feed Support</li>
-      <li>Deactivation of Categories (to support seasonal items)</li>
-      <li>Limited Site Customization</li>
-      <li>Discrete mobile advertisement</li>
+      <li>Hospedaje Gratuito</li>
+      <li>Dominio Gratuito ([nombredetusitio].yomobi.com)</li>
+      <li>C&oacute;digo de Redirecci&oacute;n Gratuito para conectar tu sitio tradicional con tu sitio m&oacute;vil</li>
+      <li>Capacidad Gratuita para hacer env&iacute;os de mensajes SMS y de E-Mails colectivos <span class="notation-number">1</span></li>
+      <li>Integraci&oacute;n Gratuita a Redes Sociales</li>
+      <li>Funci&oacute;n Gratuita de Pulsar-para-Llamar</li>
+      <li>Mapa de Ubicaci&oacute;n Gratuito con navegaci&oacute;n smartphone GPS</li>
+      <li>Con P&aacute;ginas Modificables, Categor&iacute;as y Enlaces Ilimitados</li>
+      <li>Soporte para Agregador RSS</li>
+      <li>Desactivaci&oacute;n de Categor&iacute;as (para dar soporte a elementos temporales)</li>
+      <li>Sitio Modificable de Manera Limitada</li>
+      <li>Publicidad M&oacute;vil Discreta</li>
     </ul>
   </div>
   <div class="plan-box">
-    <h3>Custom Plan</h3>
-    <h3>Cost:</h3>
+    <h3>Plan a la Medida</h3>
+    <h3>Costo:</h3>
     <ul>
-      <li>$5 per month</li>
-      <li>$50 per year</li>
+      <li>$5 al mes</li>
+      <li>$50 al a&ntilde;o</li>
     </ul>
-    <h3>Features:</h3>
+    <h3>Caracter&iacute;sticas:</h3>
     <ul>
-      <li>All the features included in the Standard Plan, plus:</li>
-      <li>Custom Domain (e.g.: m.yourdomain.com)</li>
-      <li>Enhanced Site Customization</li>
-      <li>No advertisements</li>
+      <li>Todas las caracter&iacute;sticas del Plan Est&aacute;ndar, y adem&aacute;s:</li>
+      <li>Dominio a la Medida (por ej.: m.tudominio.com)</li>
+      <li>Modificaci&oacute;n Ampliada del Sitio</li>
+      <li>Sin Publicidad</li>
     </ul>
   </div>
 <div class="hr"></div>
 <div>
-  <h3>Let YoMobi Build Your Site For You</h3>
-  <p>Even though the YoMobi platform is so easy that you can do it yourself with minimal effort using content from your existing desktop website or facebook page, we realize how busy business owners are, so we're happy to get you started by building your site for you. We offer a lot of value for a very low price because our goal is to make the mobile-commerce space accessible to everyone.</p>
-  <h3>Consulting Fees:</h3>
+  <h3>Deja Que YoMobi Arme Un Sitio Para Ti</h3>
+  <p>Aunque la plataforma YoMobi es tan sencilla que lo puedes hacer t&uacute; mismo con un m&iacute;nimo de esfuerzo usando el contenido existente en tu sitio web tradicional o de tu p&aacute;gina de facebook, nos damos cuenta de lo ocupados que se encuentran los due&ntilde;os de los negocios, de modo que nos encantar&iacute;a iniciarte en esto armando un sitio para ti. Te ofrecemos un gran valor a un muy bajo precio, puesto que nuestra meta es hacer que el medio del comercio web m&oacute;vil sea accesible para todos.</p>
+  <h3>Cuotas de Consultor&iacute;a:</h3>
   <ul>
-  <li>$25 flat fee to build a standard site<span class="notation-number">2</span></li>
-  <li>$25 per hour for additional pages</li>
+  <li>$25 cuota fija por el armado de un sitio est&aacute;ndar <span class="notation-number">2</span></li>
+  <li>$25 por hora en p&aacute;ginas adicionales</li>
   </ul>
-  <p>A typical site takes 2 to 4 hours depending on the number of pages and products/services uploaded. If you would like us to build your site please contact us at <a href="mailto:support@yomobi.com">support@yomobi.com</a>. Once we are done building your site, we will transfer ownership of the site to you. We can also provide training on how to optimally use and manage your site for the standard consulting rate.</p>
+  <p>Un sitio t&iacute;pico toma de 2 a 4 horas dependiendo del n&uacute;mero de p&aacute;ginas y productos/servicios a subir. Si quisieras que armasemos tu sitio, cont&aacute;ctanos por favor en <a href="mailto:support@yomobi.com">support@yomobi.com</a>. Una vez que hayamos armado tu sitio, transferiremos la propiedad del sitio hacia ti. Tambi&eacute;n te podemos instruir en como usar y administrar de manera &oacute;ptima tu sitio por una cuota de consultor&iacute;a est&aacute;ndar.</p>
   <br/>
-  <p>Once a site is created, updates take only minutes and you will be able to continue to maintain it very easily on your own.
+  <p>Una vez que un sitio es creado, las actualizaciones toman tan s&oacute;lo minutos y ser&aacute;s capaz de seguir d&aacute;ndole mantenimiento t&uacute; mismo de manera sencilla.
   </p>
 </div>
 
 <div class="notation-text">
 <ol>
-<li>Usage threshold limits may apply</li>
-<li>A standard site includes the following pages and features: About Us, Call Us (one-click calling), Find Us (interactive map with smartphone GPS navigation), Business Hours, Coupon, Keep Me Informed, Leave a Message, Call Me Back, and links to your desktop website, facebook page and twitter accounts, if applicable.</li>
+<li>Algunos l&iacute;mites de uso pueden aplicarse</li>
+<li>Un sitio est&aacute;ndar incluye las siguientes caracter&iacute;sticas y p&aacute;ginas: Quienes Somos, Ll&aacute;manos (pulsar para llamar), Encu&eacute;ntranos (mapa interactivo con navegaci&oacute;n smartphone GPS), Horas H&aacute;biles, Cup&oacute;n, Mant&eacute;nganme Informado, Deja un Mensaje, Regr&eacute;same la Llamada, y Enlaces hacia tu sitio tradicional, p&aacute;gina de facebook y cuenta de twitter, en caso de que sea aplicable.</li>
 </ol>
 </div>
