Updated help link for mobile tab bar editor page

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -171,7 +171,7 @@ script.edit-tab-bar(type="text/template")
     .widget-name
       =t'builder.tab_bar_editor.title'
     p.help-text
-      a.help-link href="#" =t'builder.widget_editor.help'
+      a.help-link href="http://help.yomobi.com/Mobile/EditTabBar" target="_blank" =t'builder.widget_editor.help'
   div class="edit-area"
     .explanation ==t'builder.edit_tab_bar.explanation'
     .wtab
