--- a/app/views/mobile/_yomobi-upgrade-ad.html.erb
+++ b/app/views/mobile/_yomobi-upgrade-ad.html.erb
@@ -1,6 +1,6 @@
 
 <div class="yomobi-upgrade-ad">
   <p>
-  	<a href="http://help.yomobi.com" target="ymhelp"><%= t 'builder.upgrade_ad.title' %></a>
+  	<a href="http://help.yomobi.com/SiteManager/Upgrade" target="ymhelp"><%= t 'builder.upgrade_ad.title' %></a>
   </p>
 </div>
