Fixes typos in es.yml. Added i18n to upgrade.slim. Removed .downcase from site_manager_controller.rb

--- a/app/views/site_manager/upgrade.slim
+++ b/app/views/site_manager/upgrade.slim
@@ -1,4 +1,4 @@
-h2 = "Paying #{@time} subscription for: #{@site.url_and_name}"
+h3.payment_details ==t('site_manager.payment_details', :term => "#{@time}", :site => "#{@site.url_and_name}")
 
 #checkout
 
