--- a/public/stylesheets/sass/site-manager.scss
+++ b/public/stylesheets/sass/site-manager.scss
@@ -147,6 +147,12 @@ h2.active-site {
       a { margin-right: 6px; }
     }
     label { margin-right: 12px; }
+    .payment_details { 
+      margin: 0 4px 0px 1px; 
+      padding: 6px 15px;
+      line-height: 1.5em;
+      background: #5B74A8; 
+      color: white; }
   }
 
   .signup-keys {
