Renamed Account Settings to Account Manager.

--- a/app/views/account/payments/index.slim
+++ b/app/views/account/payments/index.slim
@@ -2,7 +2,7 @@
 - content_for :title do
   h1  = t 'account_settings.payment_history'
 
-a href="http://help.yomobi.com/PaymentHistory" = t 'account_settings.payment_history_help'
+a href="http://help.yomobi.com/PaymentHistory" target="ymhelp" =t('account_settings.payment_history_help')
 br
 br
 div.payment-history-wrapper
