Added vertical divider between navigation items in logged in view _nav.slim

--- a/app/views/shared/_nav.slim
+++ b/app/views/shared/_nav.slim
@@ -1,6 +1,10 @@
 #nav
   a href=destroy_user_session_path =t'navigation_bar.sign_out'
+  div.vdivider
   a href=help_url target="_blank" =t'navigation_bar.help'
+  div.vdivider
   a href=site_manager_path =t'navigation_bar.site_manager'
+  div.vdivider
   a href=account_path =t'navigation_bar.account_settings'
+  div.vdivider
   a href=builder_main_path =t'navigation_bar.site_builder'
