Changed upgrade-ad-bar translation and CSS to make it the same size as the actual ads.

--- a/app/views/mobile/_yomobi-upgrade-ad.html.erb
+++ b/app/views/mobile/_yomobi-upgrade-ad.html.erb
@@ -1,6 +1,6 @@
 
 <div class="yomobi-upgrade-ad">
-  <p>
+  <table><tr><td>
   	<a href="http://help.yomobi.com/SiteManager/Upgrade" target="ymhelp"><%= t 'builder.upgrade_ad.title' %></a>
-  </p>
+  </td></tr></table>
 </div>
