Add `isPremium` to mobile data loader. Closes #387

--- a/app/views/shared/_mobile-data-loader.html.erb
+++ b/app/views/shared/_mobile-data-loader.html.erb
@@ -17,6 +17,7 @@ window.g = {
   body_bg: "<%=escape_javascript @company.settings.body_bg.url(:mobile) %>",
   isPreview: <%= @is_preview_mode.present? %>,
   isBuilder: <%= @is_builder.present? %>,
+  isPremium: <%= @company.premium? %>,
   isTablet: /<%= tablet_devices %>/i.test( navigator.userAgent.toLowerCase() ),
   isMobile: /<%= mobile_devices %>/i.test( navigator.userAgent.toLowerCase() ),
   isNonphone: /<%= nonphone_devices %>/i.test( navigator.userAgent.toLowerCase() ),
