Set CSS min height for mobile site height and builder-container. Deleted line from mobile-app.js where it sets the height of the mobile-container div

--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -142,6 +142,7 @@ div.wysiwyg ul.toolbar {
   background-image: url(/images/ui/deactivated.png); }
 
 #builder-container {
+  min-height: 450px;
   background: #edeff4;
   border-top: 1px solid #b3b3b3; }
 
