--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -167,6 +167,7 @@ div.wysiwyg ul.toolbar {
 }
 
 #builder-container {
+  min-height: 450px;
   background: $light-bg-color;
   border-top: 1px solid #b3b3b3; }
 
