--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -192,6 +192,7 @@ p.success {
     background: #52678c;
     text-align: right; }
     #header.signed-in #nav a, #header.signed-in #nav a:visited {
+      margin: 0px -1px;
       float: right;
       height: 23px;
       padding: 7px 10px 0;
@@ -199,6 +200,7 @@ p.success {
       font-weight: bold;
       text-decoration: none; }
     #header.signed-in #nav a:hover {
+      margin: 0px -1px;
       background-color: #6d86b7; }
     #header.signed-in #nav .vdivider {
       background: #6d86b7;
