--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -159,6 +159,7 @@ p {
     text-decoration: none; }
   .tab-bar td, .tab-bar td a {
     width: 25%;
+    max-width: 80px;
     padding: 6px 3px;
     text-align: center;
     font-weight: bold;
