--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -80,7 +80,11 @@ p {
   font-size: 16px;
   word-break:break-word;
   label {
-    margin-bottom: 2px; }
+    margin-bottom: 2px; 
+    font-size: inherit;
+    padding: inherit;
+    white-space: inherit;
+  }
   input[type=text] {
     width: 70%;
     margin: 0px 0px 10px 0px;
