Corrected issues in es-ES.yml. Fixed bug in _templates.slim where the word "Call:" wasn't I18N

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -72,7 +72,7 @@
     .clearfix
 
   script.phone-page(type="text/template")
-    h2 Call:
+    h2 =t'mobile.form.phone_number'
     h2
       | <% if (g.isMobile) { %>
       a href="tel:{{ _maybe.phone }}" {{ _maybe.phone }}
