Hide "Powered By" section for premium sites.

--- a/app/views/shared/_mobile-render.slim
+++ b/app/views/shared/_mobile-render.slim
@@ -27,6 +27,9 @@
         = render 'mobile/yomobi-upgrade-ad'
     .mobile-footer
       = render 'mobile/social-share'
-      erb:
-        <div class="powered-by"><a href="http://www.yomobi.com" target="_blank"><%=t('powered_by.slogan')%></a></div>
+      - unless @company.premium?
+        erb:
+          <div class="clearfix"></div>
+          <div style="border-top:1px solid #b3b3b3;margin:8px 0"></div>
+          <div class="powered-by"><a href="http://www.yomobi.com" target="_blank"><%=t('powered_by.slogan')%></a></div>
 
