--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -143,7 +143,8 @@ p {
     font-style: italic;
     line-height: 1em; }
   .company-info .banner-wrap {
-    text-align: center; }
+    text-align: center;
+    margin-bottom: -3px; }
   .company-info img.banner {
     max-width: 100%; }
 
