--- a/public/stylesheets/sass/account.scss
+++ b/public/stylesheets/sass/account.scss
@@ -45,7 +45,7 @@
     }
     .date, .amount { width: 85px; }
     td { padding: 3px 16px 3px 6px; border-right: 1px solid #C1DAD7; }
-    .name { border-right: none; }
+    .payment-id { border-right: none; }
     .even { background-color: #D6E9E7; margin: 6px 0px; }
   }
 }
