Updated padding and min-height for sidebar options in builder.scss

--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -26,7 +26,8 @@ div.wysiwyg ul.toolbar {
     border-top: 1px solid #dddddd;
     margin: 5px 0; }
   #sidebar .option {
-    padding: 3px 0 2px 4px;
+    min-height: 16px;
+    padding: 2px 0 2px 4px;
     clear: left; }
     #sidebar .option .icon {
       float: left;
