--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -36,8 +36,8 @@ div.wysiwyg ul.toolbar {
     border-top: 1px solid #dddddd;
     margin: 5px 0; }
   .option {
-    //height: 16px;
-    padding: 3px 0 2px 4px;
+    min-height: 16px;
+    padding: 2px 0 2px 4px;
     clear: left;
     .icon {
       float: left;
