--- a/app/views/site_manager/index.html.slim
+++ b/app/views/site_manager/index.html.slim
@@ -92,7 +92,8 @@
       | <% } %>
     button.edit =t'site_manager.edit_site'
     button.make-default =t'site_manager.make_default'
-    a href="http://help.yomobi.com/SiteManager" target="ymhelp" =t('links.help')
+    a.delete href="http://help.yomobi.com/Account/CancelAccount" target="ymhelp" =t('site_manager.delete_site')
+    a.help href="http://help.yomobi.com/SiteManager" target="ymhelp" =t('links.help')
 
   script.signup-keys(type="text/template")
     .content-header
