Fixed style differences between mobile.scss and jwysiwyg.css. Fixed photo dimensions in header, body and custom page to constrain photos primarily by width rather than height.

--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -33,7 +33,7 @@ p {
   width: 320px;
   margin: 0 auto;
   overflow: hidden;
-  font-family: Arial, Helvetica, sans-serif; }
+  font-family: "lucida grande", tahoma, verdana, arial, helvetica, sans-serif; }
 
 #canvas {
   position: relative;
