--- a/public/stylesheets/jwysiwyg.css
+++ b/public/stylesheets/jwysiwyg.css
@@ -2,10 +2,10 @@
 
 /* css for jwysiwyg */
 body {
-	font-family: "lucida grande", tahoma, verdana, arial, sans-serif;
+	font-family: "lucida grande", tahoma, verdana, arial, helvetica, sans-serif;
 	font-size: 16px; 
 	margin: 0px 0px 0px 0px;
-	padding: 0px 4px 0px 4px;  
+	padding: 5px 30px 0px 10px;  
 	word-wrap: break-word;
 	overflow: auto;
 }
