--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -60,7 +60,8 @@ p {
   width: $dynamic-width;
   margin: 0 auto;
   overflow: hidden;
-  font-family: Arial, Helvetica, sans-serif; }
+  font-family: "lucida grande", tahoma, verdana, arial, helvetica, sans-serif;
+}
 
 #canvas {
   position: relative;
