--- a/app/views/site_manager/index.html.slim
+++ b/app/views/site_manager/index.html.slim
@@ -158,7 +158,7 @@
           br
           input type="checkbox" name="terms"
             a href="payment_terms" target="ymhelp" = t 'site_manager.i_agree'
-          input type="submit" value=t('javascript_builder.submit')
+          input type="submit" value=t('javascript_builder.continue')
       .error.hide
 
   script.custom-domains(type="text/template")
