Updated the .explanation background color

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -64,7 +64,7 @@ input[type=checkbox] {
   max-width: 90%; }
 
 .explanation {
-  background: #eee685;
+  background: #fef1b5;
   padding: 8px 8px 8px;
   margin-bottom: 18px;
   border: 1px solid #ccc; }
