--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -77,7 +77,7 @@ input[type=checkbox] {
 }
 
 .explanation {
-  background: #eee685; 
+  background: #fef1b5; 
   padding: 8px 8px 8px;
   margin-bottom: 18px;
   border: 1px solid #ccc;
