--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -33,7 +33,7 @@ p {
   width: 320px;
   margin: 0 auto;
   overflow: hidden;
-  font-family: "lucida grande", tahoma, verdana, arial, helvetica, sans-serif; }
+  font-family: arial, helvetica, "lucida grande", tahoma, verdana, sans-serif; }
 
 #canvas {
   position: relative;
