--- a/app/views/layouts/application_new.slim
+++ b/app/views/layouts/application_new.slim
@@ -5,8 +5,7 @@ html lang="en-US"
     link rel="shortcut icon" type="image/x-icon" href="/yomobi.ico"
     link rel="canonical" href="http://www.yomobi.com"
 
-    = render 'shared/meta-description'
-    = render 'shared/meta-keywords'
+    = render 'shared/meta'
 
     title YoMobi - Free Mobile Website Builder Platform
 
